[metadata]
name = mitba
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
summary = Python library for caching results from functions and methods
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Infinidat Ltd.
author_email = info@infinidat.com
url = https://github.com/Infinidat/mitba

[extras]
testing =
    pytest; python_version < '3.0'
    pytest>4.0; python_version >= '3.0'
    astroid~=1.5.3; python_version<'3.5'
    astroid>=2.0; python_version>='3.5'
    pylint~=1.7.2; python_version<'3.5'
    pylint>=2.0; python_version>='3.5'
    pytest-cov
doc =
    alabaster
    docutils
    releases
    Sphinx>=1.7.1
    semantic-version==2.6.0


[tool:pytest]
testpaths = tests
